@@ -15,9 +15,10 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
-package org.apache.hama.bsp;
+package org.apache.hama.bsp.messages;
 
 import org.apache.hadoop.io.Writable;
+import org.apache.hama.bsp.Messagable;
 
 /**
  * BSPMessage consists of the tag and the arbitrary amount of data to be
